refactor(category): add my search field

--- a/src/app/views/admin/category/categories/categories.component.html
+++ b/src/app/views/admin/category/categories/categories.component.html
@@ -3,6 +3,11 @@
 </div>
 <h1>CATEGORIAS</h1>
 
+<mat-form-field>
+  <mat-label>Buscar</mat-label>
+  <input matInput>
+</mat-form-field>
+
 <div class="table">
   <mat-table mat-table [dataSource]="dataSource">
 
