--- a/src/app/views/admin/category/categories/categories.component.html
+++ b/src/app/views/admin/category/categories/categories.component.html
@@ -3,13 +3,14 @@
 </div>
 <h1>CATEGORIAS</h1>
 
-<mat-form-field>
-  <mat-label>Buscar</mat-label>
-  <input matInput>
-</mat-form-field>
-
 <div class="table">
-  <mat-table mat-table [dataSource]="dataSource">
+  <mat-form-field appearance="fill">
+    <mat-label>Buscar</mat-label>
+    <input matInput [(ngModel)]="search" placeholder="User">
+    <mat-icon matSuffix>search</mat-icon>
+  </mat-form-field>
+
+  <mat-table mat-table [dataSource]="dataSource.data | filtercategory: search">
 
     <ng-container matColumnDef="id">
       <th mat-header-cell class="custom-header-cell" *matHeaderCellDef> ID </th>
