--- a/src/app/views/admin/category/categories/categories.component.html
+++ b/src/app/views/admin/category/categories/categories.component.html
@@ -6,7 +6,7 @@
 <div class="table">
   <mat-form-field appearance="fill">
     <mat-label>Buscar</mat-label>
-    <input matInput [(ngModel)]="search" placeholder="User">
+    <input matInput [(ngModel)]="search" placeholder="Category">
     <mat-icon matSuffix>search</mat-icon>
   </mat-form-field>
 
