--- a/src/app/views/admin/product/products/products.component.html
+++ b/src/app/views/admin/product/products/products.component.html
@@ -6,7 +6,13 @@
 
   <h1>PRODUCTOS</h1>
 
-  <mat-table mat-table [dataSource]="dataSource">
+  <mat-form-field appearance="fill">
+    <mat-label>Buscar</mat-label>
+    <input matInput [(ngModel)]="search" placeholder="Product">
+    <mat-icon matSuffix>search</mat-icon>
+  </mat-form-field>
+
+  <mat-table mat-table [dataSource]="dataSource.data | filterproduct: search">
 
     <ng-container matColumnDef="id">
       <th mat-header-cell class="custom-header-cell" *matHeaderCellDef> ID </th>
